# simstack-onboarding

./: .gitignore  LICENSE  README.md  config.toml  housing_dataset.csv  pyproject.toml
private/: make_housing_dataset.py
public/: learning.py
public/first_steps/: simple_operations.py
public/models/: df_model.py
public/regression/: __init__.py  example_workflow.py
